--- a/calzone/public/index.html
+++ b/calzone/public/index.html
@@ -16,7 +16,7 @@
 
 
 
-<body class="" style="">
+<body>
 
 
   
@@ -131,7 +131,7 @@ body {
   <div id="calendar-grid" class="calendar-grid mt-4"></div>
 
   <!-- Modal -->
-  <div class="modal fade" id="slotModal" tabindex="-1" aria-hidden="true" style="display: none;">
+  <div class="modal fade" id="slotModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
