--- a/calzone/public/index.html
+++ b/calzone/public/index.html
@@ -4,29 +4,28 @@
   <meta charset="utf-8">
 
   <!-- 📱 Proper mobile viewport for scaling -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- 🧾 Favicons and basic styles -->
   <style data-tippy-stylesheet="">.tippy-box[data-animation=fade][data-state=hidden]{opacity:0}[data-tippy-root]{max-width:calc(100vw - 10px)}.tippy-box{position:relative;background-color:#333;color:#fff;border-radius:4px;font-size:14px;line-height:1.4;white-space:normal;outline:0;transition-property:transform,visibility,opacity}.tippy-box[data-placement^=top]>.tippy-arrow{bottom:0}.tippy-box[data-placement^=top]>.tippy-arrow:before{bottom:-7px;left:0;border-width:8px 8px 0;border-top-color:initial;transform-origin:center top}.tippy-box[data-placement^=bottom]>.tippy-arrow{top:0}.tippy-box[data-placement^=bottom]>.tippy-arrow:before{top:-7px;left:0;border-width:0 8px 8px;border-bottom-color:initial;transform-origin:center bottom}.tippy-box[data-placement^=left]>.tippy-arrow{right:0}.tippy-box[data-placement^=left]>.tippy-arrow:before{border-width:8px 0 8px 8px;border-left-color:initial;right:-7px;transform-origin:center left}.tippy-box[data-placement^=right]>.tippy-arrow{left:0}.tippy-box[data-placement^=right]>.tippy-arrow:before{left:-7px;border-width:8px 8px 8px 0;border-right-color:initial;transform-origin:center right}.tippy-box[data-inertia][data-state=visible]{transition-timing-function:cubic-bezier(.54,1.5,.38,1.11)}.tippy-arrow{width:16px;height:16px;color:#333}.tippy-arrow:before{content:"";position:absolute;border-color:transparent;border-style:solid}.tippy-content{position:relative;padding:5px 9px;z-index:1}</style><link rel="icon" href="/Users/newbrie/Documents/ReformUK/GitHub/Electtrek/static/favicon.ico" type="image/x-icon">
 
   <!-- 🎨 Core stylesheets -->
-  <link rel="stylesheet" href="/Users/newbrie/Documents/ReformUK/GitHub/Electtrek/static/style.css" media="screen">
-  <link rel="stylesheet" href="/Users/newbrie/Documents/ReformUK/GitHub/Electtrek/static/print.css" media="print">
+  <link rel="stylesheet" href="https://newbrie.github.io/Electtrek/static/style.css" media="screen">
+  <link rel="stylesheet" href="https://newbrie.github.io/Electtrek/static/print.css" media="print">
 
   <!-- 🌐 External libraries (CSS first) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/tippy.css">
 
   <!-- 🗺️ Optional map or per-page head block -->
-  
+
 
   <!-- 🎨 Page-specific inline CSS (calendar, etc.) -->
-  
+
 </head>
 
 <body>
   <!-- 🌍 Main content blocks -->
-  
+
 
 <style>
 body {
@@ -871,9 +870,9 @@ function populateResourcesSelect(resourcesSelect, lozenges) {
 </script>
 
 
-  
-  
-  
+
+
+
 
   <!-- ⚙️ Core JavaScript libraries -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -885,7 +884,7 @@ function populateResourcesSelect(resourcesSelect, lozenges) {
   <script src="https://newbrie.github.io/Electtrek/static/map.js"></script>
 
   <!-- 🧩 Optional JS override for per-page logic -->
-  
+
 
 
 <!-- PASSWORD OVERLAY + UNLOCK SCRIPT (injected) -->
